--- a/dmu1/dmu1_ml_SGP/notebook_output/1.3_PanSTARRS-3SS.html
+++ b/dmu1/dmu1_ml_SGP/notebook_output/1.3_PanSTARRS-3SS.html
@@ -11726,7 +11726,9 @@ body {
 div#notebook {
   overflow: visible;
   border-top: none;
-}@media print {
+}
+
+@media print {
   div.cell {
     display: block;
     page-break-inside: avoid;
@@ -11747,7 +11749,7 @@ div#notebook {
 
 <!-- Loading mathjax macro -->
 <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML"></script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -11771,7 +11773,8 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11807,9 +11810,7 @@ div#notebook {
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>This notebook was run with herschelhelp_internal version: 
@@ -11871,7 +11872,8 @@ div#notebook {
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11963,9 +11965,7 @@ div#notebook {
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.
@@ -11996,14 +11996,12 @@ Check the NumPy 1.11 release notes for more information.
 
 
 <div class="output_area">
-
 <div class="prompt output_prompt">Out[6]:</div>
-
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 &lt;Table masked=True length=10&gt;
-<table id="table140040578990768-323585" class="table-striped table-bordered table-condensed">
+<table id="table139915842663088-666123" class="table-striped table-bordered table-condensed">
 <thead><tr><th>idx</th><th>ps1_id</th><th>ps1_ra</th><th>ps1_dec</th><th>m_ap_gpc1_g</th><th>merr_ap_gpc1_g</th><th>m_gpc1_g</th><th>merr_gpc1_g</th><th>m_ap_gpc1_r</th><th>merr_ap_gpc1_r</th><th>m_gpc1_r</th><th>merr_gpc1_r</th><th>m_ap_gpc1_i</th><th>merr_ap_gpc1_i</th><th>m_gpc1_i</th><th>merr_gpc1_i</th><th>m_ap_gpc1_z</th><th>merr_ap_gpc1_z</th><th>m_gpc1_z</th><th>merr_gpc1_z</th><th>m_ap_gpc1_y</th><th>merr_ap_gpc1_y</th><th>m_gpc1_y</th><th>merr_gpc1_y</th><th>f_ap_gpc1_g</th><th>ferr_ap_gpc1_g</th><th>f_gpc1_g</th><th>ferr_gpc1_g</th><th>flag_gpc1_g</th><th>f_ap_gpc1_r</th><th>ferr_ap_gpc1_r</th><th>f_gpc1_r</th><th>ferr_gpc1_r</th><th>flag_gpc1_r</th><th>f_ap_gpc1_i</th><th>ferr_ap_gpc1_i</th><th>f_gpc1_i</th><th>ferr_gpc1_i</th><th>flag_gpc1_i</th><th>f_ap_gpc1_z</th><th>ferr_ap_gpc1_z</th><th>f_gpc1_z</th><th>ferr_gpc1_z</th><th>flag_gpc1_z</th><th>f_ap_gpc1_y</th><th>ferr_ap_gpc1_y</th><th>f_gpc1_y</th><th>ferr_gpc1_y</th><th>flag_gpc1_y</th></tr></thead>
 <tr><td>0</td><td>70400014686643761</td><td>1.46867606</td><td>-31.33047517</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>21.8388004303</td><td>0.164351001382</td><td>21.7660007477</td><td>0.115171998739</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>6.67543894152</td><td>1.01048032652</td><td>7.13838062025</td><td>0.75722036365</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>
 <tr><td>1</td><td>70400015295866629</td><td>1.52965763</td><td>-31.32794927</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>20.525100708</td><td>0.0535000003874</td><td>20.3381004333</td><td>0.0848539993167</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>22.3851349449</td><td>1.10303471781</td><td>26.5925403361</td><td>2.07829801532</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>
@@ -12025,8 +12023,8 @@ require.config({paths: {
     datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'
 }});
 require(["datatables"], function(){
-    console.log("$('#table140040578990768-323585').dataTable()");
-    $('#table140040578990768-323585').dataTable({
+    console.log("$('#table139915842663088-666123').dataTable()");
+    $('#table139915842663088-666123').dataTable({
         "order": [],
         "iDisplayLength": 50,
         "aLengthMenu": [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],
@@ -12043,7 +12041,8 @@ require(["datatables"], function(){
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -12051,7 +12050,8 @@ require(["datatables"], function(){
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -12088,9 +12088,7 @@ require(["datatables"], function(){
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.
@@ -12101,9 +12099,7 @@ Check the NumPy 1.11 release notes for more information.
 </div>
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>The initial catalogue had 1176484 sources.
@@ -12117,7 +12113,8 @@ The cleaned catalogue has 665 sources flagged as having been cleaned
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -12146,7 +12143,7 @@ The cleaned catalogue has 665 sources flagged as having been cleaned
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">nb_astcor_diag_plot</span><span class="p">(</span><span class="n">catalogue</span><span class="p">[</span><span class="n">RA_COL</span><span class="p">],</span> <span class="n">catalogue</span><span class="p">[</span><span class="n">DEC_COL</span><span class="p">],</span> 
-                    <span class="n">gaia_coords</span><span class="o">.</span><span class="n">ra</span><span class="p">,</span> <span class="n">gaia_coords</span><span class="o">.</span><span class="n">dec</span><span class="p">)</span>
+                    <span class="n">gaia_coords</span><span class="o">.</span><span class="n">ra</span><span class="p">,</span> <span class="n">gaia_coords</span><span class="o">.</span><span class="n">dec</span><span class="p">,</span> <span class="n">near_ra0</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -12158,9 +12155,7 @@ The cleaned catalogue has 665 sources flagged as having been cleaned
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 
 
@@ -12443,9 +12438,7 @@ QmCC
 </div>
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 
 
@@ -16002,7 +15995,7 @@ CCGa0P8FYmQG5kCWea4AAAAASUVORK5CYII=
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">delta_ra</span><span class="p">,</span> <span class="n">delta_dec</span> <span class="o">=</span>  <span class="n">astrometric_correction</span><span class="p">(</span>
     <span class="n">SkyCoord</span><span class="p">(</span><span class="n">catalogue</span><span class="p">[</span><span class="n">RA_COL</span><span class="p">],</span> <span class="n">catalogue</span><span class="p">[</span><span class="n">DEC_COL</span><span class="p">]),</span>
-    <span class="n">gaia_coords</span>
+    <span class="n">gaia_coords</span><span class="p">,</span> <span class="n">near_ra0</span><span class="o">=</span><span class="kc">True</span>
 <span class="p">)</span>
 
 <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;RA correction: </span><span class="si">{}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">delta_ra</span><span class="p">))</span>
@@ -16018,12 +16011,10 @@ CCGa0P8FYmQG5kCWea4AAAAASUVORK5CYII=
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
 
-
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>RA correction: 5.458859604345889e-05 arcsec
+<pre>RA correction: 5.458857685880503e-05 arcsec
 Dec correction: -0.0004657485661141436 arcsec
 </pre>
 </div>
@@ -16053,7 +16044,7 @@ Dec correction: -0.0004657485661141436 arcsec
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">nb_astcor_diag_plot</span><span class="p">(</span><span class="n">catalogue</span><span class="p">[</span><span class="n">RA_COL</span><span class="p">],</span> <span class="n">catalogue</span><span class="p">[</span><span class="n">DEC_COL</span><span class="p">],</span> 
-                    <span class="n">gaia_coords</span><span class="o">.</span><span class="n">ra</span><span class="p">,</span> <span class="n">gaia_coords</span><span class="o">.</span><span class="n">dec</span><span class="p">)</span>
+                    <span class="n">gaia_coords</span><span class="o">.</span><span class="n">ra</span><span class="p">,</span> <span class="n">gaia_coords</span><span class="o">.</span><span class="n">dec</span><span class="p">,</span> <span class="n">near_ra0</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -16065,9 +16056,7 @@ Dec correction: -0.0004657485661141436 arcsec
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 
 
@@ -16350,9 +16339,7 @@ QmCC
 </div>
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 
 
@@ -19898,7 +19885,8 @@ MAAAAABJRU5ErkJggg==
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -19941,9 +19929,7 @@ MAAAAABJRU5ErkJggg==
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>176621 sources flagged.
@@ -19955,7 +19941,8 @@ MAAAAABJRU5ErkJggg==
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -19963,7 +19950,8 @@ MAAAAABJRU5ErkJggg==
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
