s/wavelenght/wavelength/ (thanks Raphael)

--- a/dmu1/dmu1_ml_ELAIS-S1/notebook_output/2_Merging.html
+++ b/dmu1/dmu1_ml_ELAIS-S1/notebook_output/2_Merging.html
@@ -14902,7 +14902,7 @@ ygAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="VII.a-Wavelength-domain-coverage">VII.a Wavelength domain coverage<a class="anchor-link" href="#VII.a-Wavelength-domain-coverage">&#182;</a></h2><p>We add a binary <code>flag_optnir_obs</code> indicating that a source was observed in a given wavelenght domain:</p>
+<h2 id="VII.a-Wavelength-domain-coverage">VII.a Wavelength domain coverage<a class="anchor-link" href="#VII.a-Wavelength-domain-coverage">&#182;</a></h2><p>We add a binary <code>flag_optnir_obs</code> indicating that a source was observed in a given wavelength domain:</p>
 <ul>
 <li>1 for observation in optical;</li>
 <li>2 for observation in near-infrared;</li>
@@ -14979,7 +14979,7 @@ ygAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="VII.b-Wavelength-domain-detection">VII.b Wavelength domain detection<a class="anchor-link" href="#VII.b-Wavelength-domain-detection">&#182;</a></h2><p>We add a binary <code>flag_optnir_det</code> indicating that a source was detected in a given wavelenght domain:</p>
+<h2 id="VII.b-Wavelength-domain-detection">VII.b Wavelength domain detection<a class="anchor-link" href="#VII.b-Wavelength-domain-detection">&#182;</a></h2><p>We add a binary <code>flag_optnir_det</code> indicating that a source was detected in a given wavelength domain:</p>
 <ul>
 <li>1 for detection in optical;</li>
 <li>2 for detection in near-infrared;</li>
