--- a/dmu1/dmu1_ml_GAMA-12/notebook_output/2_Merging.html
+++ b/dmu1/dmu1_ml_GAMA-12/notebook_output/2_Merging.html
@@ -14183,7 +14183,7 @@ AABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="VIII.a-Wavelength-domain-coverage">VIII.a Wavelength domain coverage<a class="anchor-link" href="#VIII.a-Wavelength-domain-coverage">&#182;</a></h2><p>We add a binary <code>flag_optnir_obs</code> indicating that a source was observed in a given wavelenght domain:</p>
+<h2 id="VIII.a-Wavelength-domain-coverage">VIII.a Wavelength domain coverage<a class="anchor-link" href="#VIII.a-Wavelength-domain-coverage">&#182;</a></h2><p>We add a binary <code>flag_optnir_obs</code> indicating that a source was observed in a given wavelength domain:</p>
 <ul>
 <li>1 for observation in optical;</li>
 <li>2 for observation in near-infrared;</li>
@@ -14262,7 +14262,7 @@ AABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="VIII.b-Wavelenght-domain-detection">VIII.b Wavelenght domain detection<a class="anchor-link" href="#VIII.b-Wavelenght-domain-detection">&#182;</a></h2><p>We add a binary <code>flag_optnir_det</code> indicating that a source was detected in a given wavelenght domain:</p>
+<h2 id="VIII.b-Wavelength-domain-detection">VIII.b Wavelength domain detection<a class="anchor-link" href="#VIII.b-Wavelength-domain-detection">&#182;</a></h2><p>We add a binary <code>flag_optnir_det</code> indicating that a source was detected in a given wavelength domain:</p>
 <ul>
 <li>1 for detection in optical;</li>
 <li>2 for detection in near-infrared;</li>
