--- a/dmu1/dmu1_ml_SPIRE-NEP/notebook_output/3_Checks_and_diagnostics.html
+++ b/dmu1/dmu1_ml_SPIRE-NEP/notebook_output/3_Checks_and_diagnostics.html
@@ -11804,7 +11804,7 @@ div#notebook {
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>This notebook was run with herschelhelp_internal version: 
-04829ed (Thu Nov 2 16:57:19 2017 +0000)
+255270d (Fri Nov 24 10:35:51 2017 +0000)
 </pre>
 </div>
 </div>
@@ -11839,7 +11839,8 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">from</span> <span class="nn">matplotlib_venn</span> <span class="k">import</span> <span class="n">venn3</span><span class="p">,</span> <span class="n">venn2</span>
 
-<span class="kn">from</span> <span class="nn">herschelhelp_internal.masterlist</span> <span class="k">import</span> <span class="n">nb_compare_mags</span><span class="p">,</span> <span class="n">nb_ccplots</span><span class="p">,</span> <span class="n">nb_histograms</span><span class="p">,</span> <span class="n">find_last_ml_suffix</span>
+<span class="kn">from</span> <span class="nn">herschelhelp_internal.masterlist</span> <span class="k">import</span> <span class="p">(</span><span class="n">nb_compare_mags</span><span class="p">,</span> <span class="n">nb_ccplots</span><span class="p">,</span> <span class="n">nb_histograms</span><span class="p">,</span> <span class="n">find_last_ml_suffix</span><span class="p">,</span>
+                                              <span class="n">quick_checks</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -11888,13 +11889,66 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="I---Summary-of-wavelength-domains">I - Summary of wavelength domains<a class="anchor-link" href="#I---Summary-of-wavelength-domains">&#182;</a></h2>
+<h2 id="0---Quick-checks">0 - Quick checks<a class="anchor-link" href="#0---Quick-checks">&#182;</a></h2>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">quick_checks</span><span class="p">(</span><span class="n">master_catalogue</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+<div class="prompt"></div>
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>The column ferr_ap_gpc1_g contains 3 zero or negative values!it&#39;s minimum is 0.0.
+The column merr_ap_gpc1_g contains 3 zero or negative values!it&#39;s minimum is 0.0.
+The column ferr_gpc1_g contains 8 zero or negative values!it&#39;s minimum is 0.0.
+The column merr_gpc1_g contains 8 zero or negative values!it&#39;s minimum is 0.0.
+The column ferr_ap_gpc1_i contains 1 zero or negative values!it&#39;s minimum is 0.0.
+The column merr_ap_gpc1_i contains 1 zero or negative values!it&#39;s minimum is 0.0.
+The column ferr_gpc1_i contains 2 zero or negative values!it&#39;s minimum is 0.0.
+The column merr_gpc1_i contains 2 zero or negative values!it&#39;s minimum is 0.0.
+The column ferr_ap_gpc1_z contains 5 zero or negative values!it&#39;s minimum is 0.0.
+The column merr_ap_gpc1_z contains 5 zero or negative values!it&#39;s minimum is 0.0.
+The column ferr_gpc1_z contains 3 zero or negative values!it&#39;s minimum is 0.0.
+The column merr_gpc1_z contains 3 zero or negative values!it&#39;s minimum is 0.0.
+The column ferr_ap_gpc1_y contains 3 zero or negative values!it&#39;s minimum is 0.0.
+The column merr_ap_gpc1_y contains 3 zero or negative values!it&#39;s minimum is 0.0.
+The column ferr_gpc1_y contains 1 zero or negative values!it&#39;s minimum is 0.0.
+The column merr_gpc1_y contains 1 zero or negative values!it&#39;s minimum is 0.0.
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="I---Summary-of-wavelength-domains">I - Summary of wavelength domains<a class="anchor-link" href="#I---Summary-of-wavelength-domains">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">flag_obs</span> <span class="o">=</span> <span class="n">master_catalogue</span><span class="p">[</span><span class="s1">&#39;flag_optnir_obs&#39;</span><span class="p">]</span>
@@ -11918,7 +11972,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">u_bands</span> <span class="o">=</span> <span class="p">[]</span>
@@ -11946,7 +12000,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">for</span> <span class="n">bands</span> <span class="ow">in</span> <span class="p">[</span><span class="n">u_bands</span><span class="p">,</span> <span class="n">g_bands</span><span class="p">,</span> <span class="n">r_bands</span><span class="p">,</span> <span class="n">i_bands</span><span class="p">,</span> <span class="n">z_bands</span><span class="p">,</span> <span class="n">y_bands</span><span class="p">]:</span>
@@ -12800,7 +12854,7 @@ AAAjBC0AAAAj/xda74olR4o7NAAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">for</span> <span class="n">band_of_a_kind</span> <span class="ow">in</span> <span class="p">[</span><span class="n">u_bands</span><span class="p">,</span> <span class="n">g_bands</span><span class="p">,</span> <span class="n">r_bands</span><span class="p">,</span> <span class="n">i_bands</span><span class="p">,</span> <span class="n">z_bands</span><span class="p">,</span> <span class="n">y_bands</span><span class="p">]:</span>
@@ -12834,7 +12888,7 @@ AAAjBC0AAAAj/xda74olR4o7NAAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[8]:</div>
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">master_catalogue_coords</span> <span class="o">=</span> <span class="n">SkyCoord</span><span class="p">(</span><span class="n">master_catalogue</span><span class="p">[</span><span class="s1">&#39;ra&#39;</span><span class="p">],</span> <span class="n">master_catalogue</span><span class="p">[</span><span class="s1">&#39;dec&#39;</span><span class="p">])</span>
@@ -12858,7 +12912,7 @@ AAAjBC0AAAAj/xda74olR4o7NAAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">sdss</span> <span class="o">=</span> <span class="n">Table</span><span class="o">.</span><span class="n">read</span><span class="p">(</span><span class="s2">&quot;../../dmu0/dmu0_SDSS-DR13/data/SDSS-DR13_SPIRE-NEP.fits&quot;</span><span class="p">)</span>
@@ -12878,7 +12932,7 @@ AAAjBC0AAAAj/xda74olR4o7NAAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[11]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">for</span> <span class="n">band_of_a_kind</span> <span class="ow">in</span> <span class="p">[</span><span class="n">u_bands</span><span class="p">,</span> <span class="n">g_bands</span><span class="p">,</span> <span class="n">r_bands</span><span class="p">,</span> <span class="n">i_bands</span><span class="p">,</span> <span class="n">z_bands</span><span class="p">]:</span>
@@ -21788,7 +21842,7 @@ uRABqCAIgiAIgiAIgvBc/B8ROuo7eLyY/gAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[11]:</div>
+<div class="prompt input_prompt">In&nbsp;[12]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">nb_ccplots</span><span class="p">(</span>
@@ -22719,7 +22773,7 @@ IiIi8hP/H35xuwj/GwrSAAAAAElFTkSuQmCC
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">nb_ccplots</span><span class="p">(</span>
@@ -23593,7 +23647,7 @@ AABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[13]:</div>
+<div class="prompt input_prompt">In&nbsp;[14]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span> 
