--- a/dmu1/dmu1_ml_Lockman-SWIRE/notebook_output/1.6_SWIRE.html
+++ b/dmu1/dmu1_ml_Lockman-SWIRE/notebook_output/1.6_SWIRE.html
@@ -11817,7 +11817,7 @@ Lucia told that the magnitudes are aperture corrected.</p>
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>This notebook was run with herschelhelp_internal version: 
-04829ed (Thu Nov 2 16:57:19 2017 +0000)
+255270d (Fri Nov 24 10:35:51 2017 +0000)
 </pre>
 </div>
 </div>
@@ -11903,15 +11903,15 @@ Lucia told that the magnitudes are aperture corrected.</p>
         <span class="s1">&#39;flux_kr_45&#39;</span><span class="p">:</span> <span class="s2">&quot;f_swire_irac2&quot;</span><span class="p">,</span>
         <span class="s1">&#39;uncf_kr_45&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_swire_irac2&quot;</span><span class="p">,</span>
         <span class="s1">&#39;stell_45&#39;</span><span class="p">:</span> <span class="s2">&quot;swire_stellarity_irac2&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;flux_ap2_58&#39;</span><span class="p">:</span> <span class="s2">&quot;f_ap_irac3&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;uncf_ap2_58&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_ap_irac3&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;flux_kr_58&#39;</span><span class="p">:</span> <span class="s2">&quot;f_irac3&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;uncf_kr_58&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_irac3&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;flux_ap2_58&#39;</span><span class="p">:</span> <span class="s2">&quot;f_ap_irac_i3&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;uncf_ap2_58&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_ap_irac_i3&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;flux_kr_58&#39;</span><span class="p">:</span> <span class="s2">&quot;f_irac_i3&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;uncf_kr_58&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_irac_i3&quot;</span><span class="p">,</span>
         <span class="s1">&#39;stell_58&#39;</span><span class="p">:</span> <span class="s2">&quot;swire_stellarity_irac3&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;flux_ap2_80&#39;</span><span class="p">:</span> <span class="s2">&quot;f_ap_irac4&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;uncf_ap2_80&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_ap_irac4&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;flux_kr_80&#39;</span><span class="p">:</span> <span class="s2">&quot;f_irac4&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;uncf_kr_80&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_irac4&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;flux_ap2_80&#39;</span><span class="p">:</span> <span class="s2">&quot;f_ap_irac_i4&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;uncf_ap2_80&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_ap_irac_i4&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;flux_kr_80&#39;</span><span class="p">:</span> <span class="s2">&quot;f_irac_i4&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;uncf_kr_80&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_irac_i4&quot;</span><span class="p">,</span>
         <span class="s1">&#39;stell_80&#39;</span><span class="p">:</span> <span class="s2">&quot;swire_stellarity_irac4&quot;</span><span class="p">,</span>
     <span class="p">})</span>
 
@@ -11997,8 +11997,8 @@ Lucia told that the magnitudes are aperture corrected.</p>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 &lt;Table masked=True length=10&gt;
-<table id="table139983875112240-643665" class="table-striped table-bordered table-condensed">
-<thead><tr><th>idx</th><th>swire_intid</th><th>swire_ra</th><th>swire_dec</th><th>f_ap_swire_irac1</th><th>ferr_ap_swire_irac1</th><th>f_swire_irac1</th><th>ferr_swire_irac1</th><th>swire_stellarity_irac1</th><th>f_ap_swire_irac2</th><th>ferr_ap_swire_irac2</th><th>f_swire_irac2</th><th>ferr_swire_irac2</th><th>swire_stellarity_irac2</th><th>f_ap_irac3</th><th>ferr_ap_irac3</th><th>f_irac3</th><th>ferr_irac3</th><th>swire_stellarity_irac3</th><th>f_ap_irac4</th><th>ferr_ap_irac4</th><th>f_irac4</th><th>ferr_irac4</th><th>swire_stellarity_irac4</th><th>m_ap_swire_irac1</th><th>merr_ap_swire_irac1</th><th>m_swire_irac1</th><th>merr_swire_irac1</th><th>flag_swire_irac1</th><th>m_ap_swire_irac2</th><th>merr_ap_swire_irac2</th><th>m_swire_irac2</th><th>merr_swire_irac2</th><th>flag_swire_irac2</th><th>m_ap_irac3</th><th>merr_ap_irac3</th><th>m_irac3</th><th>merr_irac3</th><th>flag_irac3</th><th>m_ap_irac4</th><th>merr_ap_irac4</th><th>m_irac4</th><th>merr_irac4</th><th>flag_irac4</th></tr></thead>
+<table id="table140523288312184-837745" class="table-striped table-bordered table-condensed">
+<thead><tr><th>idx</th><th>swire_intid</th><th>swire_ra</th><th>swire_dec</th><th>f_ap_swire_irac1</th><th>ferr_ap_swire_irac1</th><th>f_swire_irac1</th><th>ferr_swire_irac1</th><th>swire_stellarity_irac1</th><th>f_ap_swire_irac2</th><th>ferr_ap_swire_irac2</th><th>f_swire_irac2</th><th>ferr_swire_irac2</th><th>swire_stellarity_irac2</th><th>f_ap_irac_i3</th><th>ferr_ap_irac_i3</th><th>f_irac_i3</th><th>ferr_irac_i3</th><th>swire_stellarity_irac3</th><th>f_ap_irac_i4</th><th>ferr_ap_irac_i4</th><th>f_irac_i4</th><th>ferr_irac_i4</th><th>swire_stellarity_irac4</th><th>m_ap_swire_irac1</th><th>merr_ap_swire_irac1</th><th>m_swire_irac1</th><th>merr_swire_irac1</th><th>flag_swire_irac1</th><th>m_ap_swire_irac2</th><th>merr_ap_swire_irac2</th><th>m_swire_irac2</th><th>merr_swire_irac2</th><th>flag_swire_irac2</th><th>m_ap_irac_i3</th><th>merr_ap_irac_i3</th><th>m_irac_i3</th><th>merr_irac_i3</th><th>flag_irac_i3</th><th>m_ap_irac_i4</th><th>merr_ap_irac_i4</th><th>m_irac_i4</th><th>merr_irac_i4</th><th>flag_irac_i4</th></tr></thead>
 <thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>
 <tr><td>0</td><td>2340449</td><td>161.007312</td><td>60.416528</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>12.91</td><td>1.39</td><td>9.7</td><td>1.12</td><td>0.58</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>21.1226843943</td><td>0.116899560388</td><td>21.4330706643</td><td>0.125363355601</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>
 <tr><td>1</td><td>2340443</td><td>161.007212</td><td>60.414578</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>13.59</td><td>1.4</td><td>12.99</td><td>1.41</td><td>0.47</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>21.0669513582</td><td>0.111849204317</td><td>21.1159771223</td><td>0.117851273958</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>
@@ -12020,8 +12020,8 @@ require.config({paths: {
     datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'
 }});
 require(["datatables"], function(){
-    console.log("$('#table139983875112240-643665').dataTable()");
-    $('#table139983875112240-643665').dataTable({
+    console.log("$('#table140523288312184-837745').dataTable()");
+    $('#table140523288312184-837745').dataTable({
         "order": [],
         "iDisplayLength": 50,
         "aLengthMenu": [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],
@@ -12062,7 +12062,7 @@ require(["datatables"], function(){
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">SORT_COLS</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ferr_ap_swire_irac1&#39;</span><span class="p">,</span> <span class="s1">&#39;ferr_ap_swire_irac2&#39;</span><span class="p">,</span> <span class="s1">&#39;ferr_ap_irac3&#39;</span><span class="p">,</span> <span class="s1">&#39;ferr_ap_irac4&#39;</span><span class="p">]</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">SORT_COLS</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ferr_ap_swire_irac1&#39;</span><span class="p">,</span> <span class="s1">&#39;ferr_ap_swire_irac2&#39;</span><span class="p">,</span> <span class="s1">&#39;ferr_ap_irac_i3&#39;</span><span class="p">,</span> <span class="s1">&#39;ferr_ap_irac_i4&#39;</span><span class="p">]</span>
 <span class="n">FLAG_NAME</span> <span class="o">=</span> <span class="s2">&quot;swire_flag_cleaned&quot;</span>
 
 <span class="n">nb_orig_sources</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">catalogue</span><span class="p">)</span>
